[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports"]

[dependencies]

[lib]
name = "util"
path = "rust-src/util.rs"

[[bin]]
name = "d1"
path = "rust-src/d1bin.rs"

[[bin]]
name = "d2"
path = "rust-src/d2bin.rs"

[[bin]]
name = "d3"
path = "rust-src/d3bin.rs"

[[bin]]
name = "d4"
path = "rust-src/d4bin.rs"

[[bin]]
name = "d5"
path = "rust-src/d5bin.rs"

[[bench]]
name = "bench"
path = "rust-src/bench.rs"
harness = false

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
