cabal-version: 2.4
name: aoc2023
version: 0.1.0.0


executable d1
    main-is: D1Bin.hs
    other-modules: D1Lib
    build-depends: base ^>=4.16.4.0
    hs-source-dirs: haskell-src
    default-language: Haskell2010

test-suite test
    main-is: test.hs
    type: exitcode-stdio-1.0
    other-modules: D1Lib
    build-depends:
        base >=4 && < 5,
        tasty >=1.5,
        tasty-hunit >=0.10
    hs-source-dirs: haskell-src
    default-language: Haskell2010
