cabal-version: 2.4
name: aoc2023
version: 0.1.0.0

executable d1
    main-is: D1Bin.hs
    hs-source-dirs: haskell-src
    other-modules: D1Lib, Misc
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010

executable d2
    main-is: D2Bin.hs
    hs-source-dirs: haskell-src
    other-modules: D2Lib, Misc
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010

executable d3
    main-is: D3Bin.hs
    hs-source-dirs: haskell-src
    other-modules: D3Lib, Misc
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010

test-suite test
    main-is: Test.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: haskell-src
    other-modules: Misc, D1Lib, D2Lib, D3Lib
    build-depends:
        base >=4 && < 5,
        tasty >=1.5,
        tasty-hunit >=0.10
    default-language: Haskell2010

benchmark bench
    main-is: Bench.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: haskell-src
    other-modules: Misc, D1Lib, D2Lib, D3Lib
    build-depends: base >= 4 && < 5, criterion
    default-language: Haskell2010